--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,9 @@
   <h1 class="title">Registremos a nuestros conocidos.</h1>
 </div>
 
+<br>
 <div class="buttons is-centered">
-  <a class="button is-medium is-info is-outlined" href="{% url 'missing' %}">Buscar a alguien</a>
+  <a class="button is-medium is-info is-outlined" href="{% url 'people' %}">Buscar a alguien</a>
   <a class="button is-medium is-info is-outlined is-danger" href="{% url 'register' %}">Registrar a alguien</a>
 </div>
 {% endblock content %}
