--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -18,7 +18,7 @@
       <!-- navbar items | right side -->
       <div class="navbar-end">
         <a class="navbar-item is-active" href="{% url 'landing' %}"> Home</a>
-        <a class="navbar-item" href="{% url 'people' %}">Buscar a alguien</a>
+        <a class="navbar-item" href="{% url 'missing' %}">Buscar a alguien</a>
         <a class="navbar-item" href="{% url 'register' %}">Registrar a alguien</a>
       </div>
 
